kubernetes/stateless-microservices/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateless-flask-headless-service
  namespace: stateless-namespace
spec:
  clusterIP: None
  selector:
    app: stateless-flask
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
