kubernetes/stateless-microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: stateless-flask.10.99.202.194.sslip.io ### stateless-flask.<ingress-ip>.nip.io
    http:
      paths: 
      - path: /tasks
        pathType: Prefix
        backend:
          service:
            name: stateless-flask-service-externalname
            port: 
              number: 5000
  ingressClassName: nginx

#   The spec section defines the ingress rules. In this case, there is a single
# rule that matches a specific <host> name and path prefix <path>.
# The backend section specifies which Kubernetes Service to route
# traffic to for requests matching the specified host and path. In this case,
# it specifies a service named <service-name> on port 5000.
# The pathType field is set to Prefix, which means that the path /tasks
# and any path that starts with /tasks/ will match this rule.
# The ingressClassName field specifies the name of the ingress class to
# use for this ingress. In this case, it specifies the Nginx ingress
# controller.

# In the above Ingress resource, we have specified the host name stateless-
# flask.<ingress-ip>.nip.io. Make sure to change <ingress-ip> with
# the IP address of the Ingress controller. You can get the IP address of the
# Ingress controller with the following command:

# kubectl get services nginx-ingress-ingress-nginx-controller
